<resources>
    <string name="app_name">FitnessApp</string>
    <string name="greeting_text">Hello, new user!</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_age">Enter Age:</string>
    <string name="enter_weight">Enter Weight(in lbs)</string>
    <string name="enter_height">Enter Height(in inches)</string>
    <string name="submit">Create Profile</string>
    <string name="take_a_picture">Take Picture</string>
    <string name="enter_country">Country:</string>
    <string name="enter_city">City:</string>

    <string name="enter_activity_lvl">Select Activity Level:</string>
    <string name="select_sex">Sex:</string>

    <string name="home">Home</string>
    <string name="hikes">Hikes</string>
    <string name="weather">Weather</string>
    <string name="user_settings">User Settings</string>

</resources>